examples/troubleshooting/030_configmap.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-configmap-case
  namespace: troubleshooting
  labels:
    app: nginx-configmap-case
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-configmap-case
  template:
    metadata:
      labels:
        app: nginx-configmap-case
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        volumeMounts:
         - name: config
           mountPath: /etc/nginx/
      volumes:
        - name: config
          configMap:
            name: nginx-confgmap-case
