examples/troubleshooting/040_pvc.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-pvc-case
  namespace: troubleshooting
  labels:
    app: nginx-pvc-case
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-pvc-case
  template:
    metadata:
      labels:
        app: nginx-pvc-case
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        volumeMounts:
         - name: mypvc
           mountPath: /var/lib/www/html
      volumes:
        - name: mypvc
          persistentVolumeClaim:
            claimName: my-test-pvc
            readOnly: false
