examples/troubleshooting/050_service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-service-case
  namespace: troubleshooting
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-service-case
  template:
    metadata:
      labels:
        app: nginx-service-case
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-service-case
  name: nginx-service-case
  namespace: troubleshooting
spec:
  ports:
  - port: 10080
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx-web
  type: LoadBalancer
