examples/troubleshooting/060_ingress.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-case
  namespace: troubleshooting
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-ingress-case
  template:
    metadata:
      labels:
        app: nginx-ingress-case
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-ingress-case
  name: nginx-ingress-case
  namespace: troubleshooting
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-ingress-case
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:      nginx-ingress-case
  namespace: troubleshooting
spec:
  ingressClassName: traefik
  rules:
  - host: nginx-ingress-case.tst.k8s.mycompany.com
    http:
      paths:
      - backend:
          service:
            name: nginx-ingress-case
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
