examples/troubleshooting/000_preps.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: troubleshooting
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default
spec:
  podSelector: {}
  ingress: []
  # from kube-system
  # - from:
  #   - namespaceSelector:
  #       matchLabels:
  #         kubernetes.io/metadata.name: kube-system
  # external ip
  # - from:
  #   - ipBlock:
  #       cidr: 10.0.0.0/8
